@startuml
class App{
-fileName: String
}
class SalRecord{
-record: ArrayList
-recordCount: int
+getRecord()
+printRecord();
}

class Employee{
- firstName: String
- lastName: String
-salary: int
+ getFirstName()
+ getLastName()
+ getSalary()
}

class FileManager{
+ findFile()
+readFile()
}

App o-- FileManager
App o-- SalRecord
SalRecord *--Employee
@enduml